add widget functionality

--- a/src/app/widgets/widgets.component.html
+++ b/src/app/widgets/widgets.component.html
@@ -1,1 +1,33 @@
-<h1>I am a Widget Component</h1>
+<h1>I am a Widget Component</h1><div class="mdl-grid widgets">
+    <div class="mdl-cell mdl-cell--6-col">
+        <div *ngFor="let widget of widgets"
+            (click)="selectWidget(widget)"
+            class="widget-card mdl-card mdl-shadow--2dp">
+            <img [src]="widget.img" [alt]="widget.name" width="100" height="100">
+            <div>
+                <div class="mdl-card__title">
+                    <h2 class="mdl-card__title-text">{{widget.name}}</h2>
+                </div>
+                <div class="mdl-card__supporting-text">
+                    {{widget.description}}
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="mdl-cell mdl-cell--6-col">
+        <div class="widget-card mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title">
+                <h2 *ngIf="!selectedWidget" class="mdl-card__title-text">Select a Widget</h2>
+                <h2 *ngIf="selectedWidget" class="mdl-card__title-text">{{selectedWidget?.name}}</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+                <pre>{{selectedWidget | json}}</pre>
+            </div>
+            <div class="mdl-card__actions">
+                <button (click)="selectWidget(null)"
+                        type="button" class="mdl-button mdl-js-button mdl-js-ripple-effect">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
