--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" [routerLink]="links.items">Items</a>
         <a class="mdl-navigation__link" [routerLink]="links.widgets">Widgets</a>
+        <a class="mdl-navigation__link" [routerLink]="links.review">Review</a>
       </nav>
     </div>
   </header>
